project(UserProcessDllForBaseLib)
add_library(UserProcessDllForBaseLib STATIC dllmain.cpp UserApiTable.cpp)
IF(WIN32)
add_definitions(-DWindows -DAPIHOOK_Ring3 -DSTATIC_LIB)
ELSE(UNIX)
add_definitions(-DUnix -DAPIHOOK_Ring3 -DSTATIC_LIB)
ENDIF()
install(TARGETS UserProcessDllForBaseLib DESTINATION ./bin)
IF(WIN32)
install(TARGETS UserProcessDllForBaseLib ARCHIVE DESTINATION ./lib)
ENDIF()
